feat: tugas pertemuan 6 - register user feature
